--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "private": true,
     "scripts": {
         "build": "lerna run build",
-        "test:core": "yarn workspace @orbaone-verify/core test",
-        "build:core": "yarn workspace @orbaone-verify/core build",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "lerna run test"
     },
     "keywords": [],
     "author": "",
