--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,9 @@
     "scripts": {
         "build": "rollup -c",
         "buid:watch": "tsc --watch",
-        "test": "jest --env jest-environment-jsdom-fourteen"
+        "test": "jest --env jest-environment-jsdom-fourteen",
+        "prepublishOnly": "yarn test && yarn lint && yarn build",
+        "lint": "eslint src/**/*.{js,ts,tsx} --quiet"
     },
     "keywords": [],
     "author": "",
@@ -18,7 +20,10 @@
     "devDependencies": {
         "@testing-library/dom": "^7.24.2",
         "@types/jest": "^26.0.12",
+        "@typescript-eslint/eslint-plugin": "^4.2.0",
+        "@typescript-eslint/parser": "^4.2.0",
         "@wessberg/rollup-plugin-ts": "^1.3.4",
+        "eslint": "^7.9.0",
         "jest": "^26.4.2",
         "jest-environment-jsdom-fourteen": "^1.0.1",
         "jest-fetch-mock": "^3.0.3",
