--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
         "jest-fetch-mock": "^3.0.3",
         "rollup": "^2.27.1",
         "rollup-plugin-delete": "^2.0.0",
+        "rollup-plugin-terser": "^7.0.2",
         "ts-jest": "^26.3.0",
         "typescript": "^4.0.3"
     }
