--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,13 @@
     "main": "lib/index.js",
     "module": "lib/index.es.js",
     "browser": "lib/index.bundle.js",
+    "repository": "git@github.com/orbaone/button.git",
+    "author": "Nicolas Brown <nclsbrwn@gmail.com>",
+    "contributors":[
+        "Jordan Jones <proxima.aust@gmail.com> (https://heyjordn.com)",
+        "Rojay Simpson <harrysmith1991@gmail.com>"
+    ],
+    "bugs": "https://github.com/orbaone/button/issues",
     "scripts": {
         "build": "rollup -c",
         "buid:watch": "tsc --watch",
@@ -14,7 +21,6 @@
         "lint": "eslint src/**/*.{js,ts,tsx} --quiet"
     },
     "keywords": [],
-    "author": "",
     "license": "ISC",
     "devDependencies": {
         "@testing-library/dom": "^7.24.2",
@@ -32,5 +38,5 @@
         "ts-jest": "^26.3.0",
         "typescript": "^4.0.3"
     },
-    "gitHead": "b5cc843be9a89c470326c58e3240853d2b4c17e3"
+    "gitHead": "4d2f67743002ee913cd60a2c8ae13ce11dbda07b"
 }
