--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
         "outDir": "lib",
-        "declarationDir": "lib/types",
+        "declarationDir": "lib",
 
         "declaration": true,
         "rootDir": "../.."
