--- a/packages/react/tsconfig.prod.json
+++ b/packages/react/tsconfig.prod.json
@@ -1,11 +1,12 @@
 {
     "extends": "../../tsconfig.base.json",
     "compilerOptions": {
+        "outDir": "lib",
+        "declarationDir": "lib",
+
         "declaration": true,
-        "rootDir": "../..",
 
         "jsx": "react"
-    }
-    // "exclude": ["node_modules", "lib"],
-    // "include": ["../test"]
+    },
+    "exclude": ["node_modules", "lib"]
 }
