--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,5 @@
         "packages/*"
     ],
     "version": "1.0.3",
-    "npmClient": "yarn",
-    "useWorkspaces": true
+    "npmClient": "yarn"
 }
